--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Decision Tree\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/alinaali/ML_Testing/blob/main/Decision_Tree.ipynb)\n",
+    "\n",
+   ]
+  },
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+     "\n",
+    "# Lecture 8.1 Decision and Regression Trees\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/RandyRDavila/Data_Science_and_Machine_Learning_Spring_2022/blob/main/Lecture_8/Lecture_8_1.ipynb)\n",
+    "\n",
     "---\n",
     "\n",
     "# Lecture 8.1 Decision and Regression Trees\n",
