--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decision Tree\n",
+    "# Decision Tree"
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/alinaali/ML_Testing/blob/main/Decision_Tree.ipynb)\n",
     "\n",
