--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# Decision Tree\n",
-    "---\n",
-    "\n",
+    "# Decision Tree"
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/alinaali/ML_Testing/blob/main/Decision_Tree.ipynb)\n",
-    "\n",
-    "---\n",
    ]
   },
    "cell_type": "markdown",
